[package]
name = "movement-platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.22.0", features = [
  "simd-stable",
  "debug-render-2d",
  "parallel",
] }
bevy-inspector-egui = "0.20.0"
bevy-parallax = "0.6.1"
bevy_ecs_ldtk = { version = "0.8.0" }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
